GUI package compilation

--- a/Payroll System Console Based/pom.xml
+++ b/Payroll System Console Based/pom.xml
@@ -5,30 +5,25 @@
     
     <modelVersion>4.0.0</modelVersion>
     <groupId>TeamNC_codesbyKelsy</groupId>
-    <artifactId>MotorPH</artifactId> 
+    <artifactId>MotorPH</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
+    <properties>
+        <maven.compiler.source>24</maven.compiler.source>
+        <maven.compiler.target>24</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
             </plugin>
         </plugins>
     </build>
-    
-    <properties>
-  <maven.compiler.source>17</maven.compiler.source>
-  <maven.compiler.target>17</maven.compiler.target>
-  <maven.compiler.release>17</maven.compiler.release>
-    </properties>
-
 
     <dependencies>
         <dependency>
@@ -36,6 +31,11 @@
             <artifactId>opencsv</artifactId>
             <version>5.7.1</version>
         </dependency>
+        <!-- Add Swing dependency for GUI components -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>17.0.2</version>
+        </dependency>
     </dependencies>
-
 </project>
